// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responsiveLinearGradient should return a background-image style rule for multiple device sizes when deg and stops args are passed 1`] = `
Array [
  "
    ",
  "
    background-image: linear-gradient(",
  "256deg",
  ", ",
  "rgb(0, 45, 161), rgb(2, 108, 223) 55%, rgb(0, 45, 161)",
  ");
  ",
  ";
    ",
  "
  @media screen and ",
  "(min-width: 768px)",
  " {
    ",
  "
    background-image: linear-gradient(",
  "240deg",
  ", ",
  "rgb(0, 45, 161), rgb(2, 108, 223) 55%, rgb(0, 45, 161)",
  ");
  ",
  ";
  }
",
  " ",
  "
  @media screen and ",
  "(min-width: 1024px)",
  " {
    ",
  "
    background-image: linear-gradient(",
  "220deg",
  ", ",
  "rgb(0, 45, 161), rgb(2, 108, 223) 55%, rgb(0, 45, 161)",
  ");
  ",
  ";
  }
",
  ";
  ",
]
`;

exports[`responsiveLinearGradient should return a background-image style rule when deg and stops args are passed 1`] = `
Array [
  "
    ",
  "
    background-image: linear-gradient(",
  "256deg",
  ", ",
  "rgb(0, 45, 161), rgb(2, 108, 223) 55%, rgb(0, 45, 161)",
  ");
  ",
  ";
    ",
  " ",
  ";
  ",
]
`;

exports[`responsiveLinearGradient should return a background-image style rule when deg and stops args are passed 2`] = `
Array [
  "
    ",
  "
    background-image: linear-gradient(",
  "256deg",
  ", ",
  "rgb(0, 45, 161), rgb(2, 108, 223) 55%, rgb(0, 45, 161)",
  ");
  ",
  ";
    ",
  " ",
  ";
  ",
]
`;

exports[`responsiveLinearGradient should return no rule when only a deg arg is passed 1`] = `undefined`;

exports[`responsiveLinearGradient should return no rule when only a stops arg is passed 1`] = `undefined`;
